--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,25 +308,41 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><code class='maruku-mathml'>
-  \array{
-    b 
-      &amp;\mapsto&amp; 
-   \left( \Phi \mapsto \underset{\Sigma}{\int} b(x) \cdot \Phi(x) \, dvol_\Sigma(x) \Right)
-  }
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0c4c399ec525f68217c32a7e975cbaea959d5fb0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>polynomial</mtext></mtd></mtr> <mtr><mtd><mtext>observables</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow><munderover><mo>⟵</mo><mo>≃</mo><mtext>causal propagator</mtext></munderover><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>compactly supported</mtext></mtd></mtr> <mtr><mtd><mtext>distributions in serveral variables</mtext></mtd></mtr> <mtr><mtd><mtext>which are distributional solutions</mtext></mtd></mtr> <mtr><mtd><mtext>to the adjoint equations of motion</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mrow><annotation encoding='application/x-tex'>
+  \left\{
+    \array{
+      \text{polynomial}
+      \\
+      \text{observables}
+    }
+  \right\}
+    \underoverset{\simeq}{
+       \text{causal propagator}
+    }{\longleftarrow}
+  \left\{
+    \array{
+      \text{compactly supported}
+      \\
+      \text{distributions in serveral variables}
+      \\
+      \text{which are distributional solutions}
+      \\
+      \text{to the adjoint equations of motion}
+    }
+  \right\}
 
-</code></div>
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November 15, 2017 14:23:36 
+  Revised on November 15, 2017 15:59:48 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1247" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1247 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1248" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1248 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
