--- a/pages/17721.html
+++ b/pages/17721.html
@@ -321,7 +321,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
 </li>
 
 <li>
@@ -374,7 +374,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -578,12 +578,12 @@ margin-left: 0em;
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, <em>induction-induction</em> is a principle for mutually defining <a class='existingWikiWord' href='/nlab/show/type'>types</a> of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>and</mi><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>B</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>and</mi><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>B</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   A \colon Type\,,\;\;\; and \;\;\; B \colon A \to Type
   \,,
 
 </annotation></semantics></math></div>
-<p>where both <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/inductive+type'>defined inductively</a>, such that the constructors for <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> can refer to <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> and vice versa. In addition, the constructor for <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> can refer to the constructor for <math class='maruku-mathml' display='inline' id='mathml_ff4f8d29f280dd83d6fea9f8f86c56d34c96b0bb_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</p>
+<p>where both <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/inductive+type'>defined inductively</a>, such that the constructors for <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> can refer to <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> and vice versa. In addition, the constructor for <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> can refer to the constructor for <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</p>
 
 <p>Such induction-induction occurs for instance when formalising <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> in <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>.</p>
 
@@ -627,6 +627,10 @@ margin-left: 0em;
 <li id='QIIT'>
 <p>Thorsten Altenkirch, Paolo Capriotti, Gabe Dijkstra, Fredrik Nordvall Forsberg, <em>Quotient inductive-inductive types</em>, <a href='https://arxiv.org/abs/1612.02346'>arXiv</a>, 2016</p>
 </li>
+
+<li>
+<p>Ambrus Kaposi, András Kovács, <em><a href='https://akaposi.github.io/qiit.pdf'>Codes for quotient inductive inductive types</a></em></p>
+</li>
 </ul>
 
 <p>Parts of the above text are taken from</p>
@@ -641,14 +645,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 22, 2017 08:10:03 
-  by <a class="existingWikiWord" href="/nlab/show/Bas+Spitters">Bas Spitters</a>
-  (192.38.33.16)
+  Revised on November 16, 2017 04:49:22 
+  by <span class="newWikiWord">Ambrus Kaposi<a href="/nlab/new/Ambrus+Kaposi">?</a></span>
+  (157.181.167.45)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/inductive-inductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inductive-inductive+type/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/inductive-inductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inductive-inductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/inductive-inductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inductive-inductive+type/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/inductive-inductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inductive-inductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
