--- a/pages/2442.html
+++ b/pages/2442.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,205 +308,23 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide toc'>
+    <h2 id='idea'>Idea</h2>
 
-**<a class='existingWikiWord' href='/nlab/show/super+algebra'>superalgebra</a>** and (<a class='existingWikiWord' href='/nlab/show/synthetic+differential+supergeometry'>synthetic</a>
-) **<a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>**
-
-## Background
-
-* <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a>
-
-* <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>
-
-* <a class='existingWikiWord' href='/nlab/show/graded+set'>graded object</a>
-
-## Introductions 
-
-* <a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+superalgebra'>geometry of physics -- superalgebra</a>
-
-* <a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+supergeometry'>geometry of physics -- supergeometry</a>
-
-## Superalgebra ##
-
-* <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector space</a>, <a class='existingWikiWord' href='/nlab/show/super+vector+space'>SVect</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+algebra'>super algebra</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/supercommutative+algebra'>supercommutative superalgebra</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/exterior+algebra'>Grassmann algebra</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/Clifford+algebra'>Clifford algebra</a>
-
-* <a class='existingWikiWord' href='/nlab/show/superdeterminant'>superdeterminant</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+L-infinity+algebra'>super L-infinity algebra</a>
-
-
-
-
-## Supergeometry ##
-
-* <a class='existingWikiWord' href='/nlab/show/superpoint'>superpoint</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+Cartesian+space'>super Cartesian space</a>
-
-* <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a>, <a class='existingWikiWord' href='/nlab/show/SDiff'>SDiff</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/NQ-supermanifold'>NQ-supermanifold</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/super+vector+bundle'>super vector bundle</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/complex+supermanifold'>complex supermanifold</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/Euclidean+supermanifold'>Euclidean supermanifold</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+spacetime'>super spacetime</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/super+Minkowski+spacetime'>super Minkowski spacetime</a>
-
-* <a class='existingWikiWord' href='/nlab/show/integration+over+supermanifolds'>integration over supermanifolds</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/Berezin+integral'>Berezin integral</a>
-
-* <a class='existingWikiWord' href='/nlab/show/supergroup'>super Lie group</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/supergroup'>super translation group</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/super+Euclidean+group'>super Euclidean group</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+infinity-groupoid'>super ∞-groupoid</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+formal+smooth+infinity-groupoid'>super formal smooth ∞-groupoid</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+line+2-bundle'>super line 2-bundle</a>
-
-
-
-
-
-## Supersymmetry
-
-<a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>
-
-* <a class='existingWikiWord' href='/nlab/show/division+algebra+and+supersymmetry'>division algebra and supersymmetry</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+multiplet'>supermultiplet</a>
-
-* <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS state</a>
-
-* <a class='existingWikiWord' href='/nlab/show/M-theory+supersymmetry+algebra'>M-theory super Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/type+II+supersymmetry+algebra'>type II super Lie algebra</a>
-
-* <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a>
-
-## Supersymmetric field theory
-
-* <a class='existingWikiWord' href='/nlab/show/superfield'>superfield</a>
-
-* <a class='existingWikiWord' href='/nlab/show/supersymmetric+quantum+mechanics'>supersymmetric quantum mechanics</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/superparticle'>superparticle</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/adinkra'>adinkra</a>
-
-* <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills theory</a>
-
-* <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/gauged+supergravity'>gauged supergravity</a>
-
-* <a class='existingWikiWord' href='/nlab/show/string+theory'>superstring theory</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a>
-
-  * <a class='existingWikiWord' href='/nlab/show/heterotic+string+theory'>heterotic string theory</a>
-
-## Applications
-
-* <a class='existingWikiWord' href='/nlab/show/geometric+model+for+elliptic+cohomology'>geometric model for elliptic cohomology</a>
-
-
-<div>
-<p>
-  <a href='/nlab/edit/supergeometry+-+contents'>Edit this sidebar</a>
-</p>
-</div>
-
-</div>
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#super_tangent_bundles'>Super tangent bundles</a></li></ul></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>An ordinary smooth <a class='existingWikiWord' href='/nlab/show/vector+bundle'>vector bundle</a> on a <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> may be identified with its <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a> of <a class='existingWikiWord' href='/nlab/show/section'>section</a>s, which is a locally free sheaf of modules over its <a class='existingWikiWord' href='/nlab/show/structure+sheaf'>structure sheaf</a> and all such locally free module sheaves arise this way.</p>
-
-<p>The definition of vector bundles in terms of sheaves of sections therefore immediately generalizes to every <a class='existingWikiWord' href='/nlab/show/ringed+space'>ringed space</a> and in particular to <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a>s.</p>
-
-<h2 id='definition'>Definition</h2>
-
-<p>A <strong>super vector bundle</strong> over a <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a> <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is a locally free <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a> on the <a class='existingWikiWord' href='/nlab/show/category+of+open+subsets'>category of open subsets</a> of <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>|</mo><mi>X</mi><mo stretchy='false'>|</mo></mrow><annotation encoding='application/x-tex'>|X|</annotation></semantics></math> of modules for the <a class='existingWikiWord' href='/nlab/show/structure+sheaf'>structure sheaf</a> <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>O</mi> <mi>X</mi></msub></mrow><annotation encoding='application/x-tex'>O_X</annotation></semantics></math>.</p>
-
-<h2 id='examples'>Examples</h2>
-
-<h3 id='super_tangent_bundles'>Super tangent bundles</h3>
-
-<p>The <a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent bundle</a> of an ordinary <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> has the sheaf of sections given by the <a class='existingWikiWord' href='/nlab/show/derivation'>derivation</a>s of the <a class='existingWikiWord' href='/nlab/show/structure+sheaf'>structure sheaf</a>. The same definition works here:</p>
-
-<p>the <strong>super tangent bundle</strong> <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mi>X</mi></mrow><annotation encoding='application/x-tex'>T X</annotation></semantics></math> of a <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a> <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is given by the sheaf <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo>↦</mo><mi>Der</mi><msub><mi>O</mi> <mi>X</mi></msub><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>U \mapsto Der O_X(U)</annotation></semantics></math>.</p>
-
-<p>so a super tangent vector field is a global section of this sheaf of derivations.</p>
-
-<div class='un_example'>
-<h6 id='example'>Example</h6>
-
-<p>On the <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a> <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>1</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{1|1}</annotation></semantics></math> with its canonical coordinates</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>∈</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><mn>1</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup><msup><mo stretchy='false'>)</mo> <mi>ev</mi></msup></mrow><annotation encoding='application/x-tex'>
-  t \in C^\infty(\mathbb{R}^{1|1})^{ev}
-
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>θ</mi><mo>∈</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><mn>1</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup><msup><mo stretchy='false'>)</mo> <mi>odd</mi></msup></mrow><annotation encoding='application/x-tex'>
-  \theta \in C^\infty(\mathbb{R}^{1|1})^{odd}
-
-</annotation></semantics></math></div>
-<p>there is the odd vector field</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>:</mo><mo>=</mo><msub><mo>∂</mo> <mi>θ</mi></msub><mo>+</mo><mi>θ</mi><mo>⋅</mo><msub><mo>∂</mo> <mi>t</mi></msub></mrow><annotation encoding='application/x-tex'>
-  D := \partial_\theta + \theta \cdot \partial_{t}
-
-</annotation></semantics></math></div>
-<p>whose super Lie bracket with itself vanishes</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>D</mi><mo>,</mo><mi>D</mi><mo stretchy='false'>]</mo><mo>=</mo><mn>0</mn><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  [D, D] = 0
-  \,.
-
-</annotation></semantics></math></div></div>
-
-<div class='un_thm'>
-<h6 id='claim'>Claim</h6>
-
-<p>This odd vector field <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is left invariant with respect to the <a class='existingWikiWord' href='/nlab/show/supergroup'>super translation group</a> structure on <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>1</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{1|1}</annotation></semantics></math>.</p>
-</div>
-
-<p>This means that <math class='maruku-mathml' display='inline' id='mathml_d06cad5529f08accb7ca673922d98da37e34d528_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Lie</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><mn>1</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Lie(\mathbb{R}^{1|1})</annotation></semantics></math> is free on one odd generator.</p>
+<p>The concept of <em>super vector bundle</em> is the generalization of that of <em><a class='existingWikiWord' href='/nlab/show/differentiable+vector+bundle'>smooth vector bundle</a></em> from <a class='existingWikiWord' href='/nlab/show/differential+geometry'>differential geometry</a> to <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>: A super vector bundle is a <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundle</a> over a <a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a> whose <a class='existingWikiWord' href='/nlab/show/fiber'>fibers</a> are <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector spaces</a> in a compactible way.</p>
 
 <p>
- 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on April  5, 2013 13:42:24 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (134.76.82.221)
+  Revised on November 16, 2017 15:02:39 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/super+vector+bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+vector+bundle/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/super+vector+bundle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+vector+bundle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/super+vector+bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+vector+bundle/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/super+vector+bundle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+vector+bundle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
